# app-cli

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.cargo/: audit.toml
.claude/: .gitignore  settings.json
.claude/skills/version-bump/: SKILL.md
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  release.yml
docs/: config.md  json-api.md
openspec/changes/archive/2026-04-04-api-field-dot-paths/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-04-fix-dot-path-array-spec/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-04-fix-dot-path-conflict-error-message/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-clinicians-assign-team/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-clinicians-grant-role/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-clinicians-register/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-clinicians-update/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-04-05-fix-dot-path-error-message/: design.md  proposal.md  tasks.md
openspec/specs/api-field-dot-paths/: spec.md
openspec/specs/artifacts-list/: spec.md
openspec/specs/clinicians-assign-team/: spec.md
openspec/specs/clinicians-grant/: spec.md
openspec/specs/clinicians-register/: spec.md
openspec/specs/clinicians-show/: spec.md
openspec/specs/clinicians-update/: spec.md
openspec/specs/config-default/: spec.md
openspec/specs/roles-list/: spec.md
openspec/specs/roles-show/: spec.md
openspec/specs/teams-list/: spec.md
openspec/specs/teams-show/: spec.md
openspec/specs/workspaces-list/: spec.md
openspec/specs/workspaces-show/: spec.md
skills/: rw-skill.md
src/: api.rs  auth_cache.rs  cli.rs  config.rs  domain.rs  http.rs  jsonapi.rs  lib.rs  main.rs  migration.rs  output.rs  prompt.rs  version_check.rs
src/commands/: actions.rs  api.rs  artifacts.rs  auth.rs  basic.rs  clinicians.rs  config.rs  mod.rs  profile.rs  roles.rs  skills.rs  teams.rs  update.rs  workspaces.rs
src/commands/clinicians/: assign.rs  client.rs  data.rs  enable.rs  grant.rs  mod.rs  output.rs  prepare.rs  register.rs  show.rs  testing.rs  update.rs
src/commands/config/: default.rs  doctor.rs  mod.rs  profile.rs  prompts.rs  updates.rs
src/domain/: mod.rs  slug.rs  stage.rs
tests/: cli.rs
(+61 files in other folders)
