[package]
name = "rw"
version = "0.7.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "rw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
dirs = "6"
write_atomic = "0.7"
webbrowser = "1"
jaq-core = "3.0.0"
jaq-std = "3.0.0"
jaq-json = "2.0.0"
uuid = { version = "1", features = ["v4"] }
rpassword = "7"
json_dotpath = "1"
self_update = { version = "0.43", default-features = false, features = ["reqwest", "rustls", "archive-tar", "compression-flate2"] }
validator = { version = "0.19", features = ["derive"] }
regex = "1"

[dev-dependencies]
mockito = "1"
tempfile = "3"
