[package]
name = "rw"
version = "0.10.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "rw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "query", "rustls"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
base64 = "0.22"
dirs = "6"
write_atomic = "0.7"
webbrowser = "1"
jaq-core = "3.0.0"
jaq-std = "3.0.0"
jaq-json = "2.0.0"
uuid = { version = "1", features = ["v4"] }
rpassword = "7"
json_dotpath = "1"
self_update = { version = "0.44", default-features = false, features = ["reqwest", "rustls", "archive-tar", "compression-flate2"] }
validator = { version = "0.20", features = ["derive"] }
regex = "1"
tabled = "0.20.0"

[dev-dependencies]
mockito = "1"
tempfile = "3"
